# rust-io-compat

./: Cargo.toml  README.md
src/: lib.rs
