[package]
name = "io-compat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acid_io = { version = "0.1.0", default-features = false, optional = true }
cfg-if = "1.0.0"
core2 = { version = "0.4.0", default-features = false, optional = true }
fatfs = { git = "https://github.com/rafalh/rust-fatfs", version = "0.4.0", default-features = false, optional = true }
# broken:
#core_io = { version = "0.1.20210325", default-features = false, optional = true }

[features]
# TODO: alloc feature is currently broken
default = ["std"]
all = ["acid_io", "core2", "fatfs"]
acid_io = ["dep:acid_io"]
core2 = ["dep:core2"]
fatfs = ["dep:fatfs"]
alloc = ["acid_io/alloc", "core2/alloc", "fatfs/alloc"]
std = ["alloc"]
