[package]
name = "io-compat"
version = "0.1.0"
edition = "2021"

[dependencies]
acid_io = { version = "0.1.0", default-features = false, optional = true }
cfg-if = "1.0.0"
core2 = { version = "0.4.0", default-features = false, optional = true }
fatfs = { git = "https://github.com/rafalh/rust-fatfs", version = "0.4.0", default-features = false, optional = true }
# broken:
#core_io = { version = "0.1.20210325", default-features = false, optional = true }

[features]
default = ["std"]
all = ["acid_io", "core2", "fatfs"]
alloc = ["acid_io?/alloc", "core2?/alloc", "fatfs?/alloc"]
std = ["alloc", "acid_io?/std", "core2?/std", "fatfs?/std"]
